EngineDriver changes by Robin Becker: web page zoom in and out now supported, minor fixes